--- a/package.json
+++ b/package.json
@@ -7,13 +7,8 @@
   "types": "src/index.d.ts",
   "scripts": {
     "lint": "aegir lint",
-<<<<<<< HEAD
-    "lint:fix": "aegir lint --fix",
-    "build": "npm run build:proto && npm run build:proto-types && aegir build",
-=======
     "prepare": "npm run build --types false",
     "build": "npm run build:proto && npm run build:proto-types && aegir build --types false",
->>>>>>> master
     "build:proto": "pbjs -t static-module -w commonjs -r libp2p-peer-id --force-number --no-verify --no-delimited --no-create --no-beautify --no-defaults --lint eslint-disable -o src/proto.js ./src/proto.proto",
     "build:proto-types": "pbts -o src/proto.d.ts src/proto.js",
     "test": "aegir test",
@@ -42,29 +37,17 @@
   },
   "homepage": "https://github.com/libp2p/js-peer-id",
   "devDependencies": {
-<<<<<<< HEAD
-    "@types/chai": "^4.2.14",
-    "@types/dirty-chai": "^2.0.2",
-    "@types/mocha": "^8.2.0",
-    "aegir": "^33.2.0",
-    "util": "^0.12.3"
-  },
-  "dependencies": {
-    "cids": "^1.1.5",
-    "libp2p-crypto": "^0.19.0",
-    "minimist": "^1.2.5",
-    "multihashes": "^4.0.2",
-=======
     "aegir": "^36.0.1",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "libp2p-interfaces-compliance-tests": "^2.0.6"
   },
   "dependencies": {
     "class-is": "^1.1.0",
     "libp2p-crypto": "^0.21.0",
     "multiformats": "^9.4.5",
->>>>>>> master
     "protobufjs": "^6.10.2",
-    "uint8arrays": "^3.0.0"
+    "uint8arrays": "^3.0.0",
+    "libp2p-interfaces": "^2.0.5"
   },
   "repository": {
     "type": "git",
